fix changed BookingMapper import on BookingServiceTest